<resources>
    <string name="app_name">TrustStock</string>
    <string name="truststock">TrustStock</string>
    <string name="staff">Staff</string>
    <string name="customer">Customer</string>
    <string name="staff_dashboard">Staff Dashboard</string>
    <string name="manage_products">Manage Products</string>
    <string name="view_orders">View Orders</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="forecast_stock_status"><![CDATA[Forecast & Stock Status]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="welcome_staff">Welcome Staff</string>
    <string name="logout">Logout</string>
    <string name="product_management">Product Management</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="add_product">Add Product</string>
    <string name="Logout">Logout</string>
    <string name="productName">Product Name</string>
    <string name="_0_00">$0.00</string>
    <string name="cart">Cart</string>
    <string name="productname">Product Name</string>
</resources>