<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truststock"
        android:textSize="28sp"
        android:textStyle="bold"
        android:paddingBottom="40dp"/>

    <Button
        android:id="@+id/btnStaff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/staff"
        android:padding="12dp"/>

    <Button
        android:id="@+id/btnCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:layout_marginTop="16dp"
        android:padding="12dp"/>

</LinearLayout>
